# serializer version: 1
# name: test_diagnostics_no_gas_today
  dict({
    'energy': dict({
      'average_price': 0.252829121875,
      'current_hour_price': 0.28275885,
      'highest_price_time': '2026-04-10T18:00:00+00:00',
      'hours_priced_equal_or_lower': 20,
      'lowest_price_time': '2026-04-10T01:00:00+00:00',
      'max_price': 0.399000525,
      'min_price': 0.19798625,
      'next_hour_price': 0.2629693,
      'percentage_of_max': 70.87,
    }),
    'entry': dict({
      'title': 'energy',
    }),
    'gas': dict({
      'current_hour_price': None,
      'next_hour_price': None,
    }),
  })
# ---
# name: test_entry_diagnostics
  dict({
    'energy': dict({
      'average_price': 0.252829121875,
      'current_hour_price': 0.28275885,
      'highest_price_time': '2026-04-10T18:00:00+00:00',
      'hours_priced_equal_or_lower': 20,
      'lowest_price_time': '2026-04-10T01:00:00+00:00',
      'max_price': 0.399000525,
      'min_price': 0.19798625,
      'next_hour_price': 0.2629693,
      'percentage_of_max': 70.87,
    }),
    'entry': dict({
      'title': 'energy',
    }),
    'gas': dict({
      'current_hour_price': 1.2736393201224,
      'next_hour_price': 1.2736393201224,
    }),
  })
# ---
